# internal/server.go
@@ -9,6 +9,34 @@ import (
 	"github.com/rs/zerolog"
 )
 
+type server struct {
+	db     PkidStore
+	logger zerolog.Logger
+}
+
+// create a new instance of the server
+func newServer(logger zerolog.Logger) server {
+	return server{
+		logger: logger,
+	}
+}
+
+// set the connection and migration of the db
+func (s *server) setConn(filePath string) error {
+	if filePath == "" {
+		return errors.New("no file path provided")
+	}
+
+	db := newPkidStore()
+	db.setConn(filePath)
+	if err := db.migrate(); err != nil {
+		return err
+	}
+
+	s.db = db
+	return nil
+}
+
 func StartServer(logger zerolog.Logger, filePath string, port int) error {
 
 	if filePath == "" {
@@ -19,25 +47,26 @@ func StartServer(logger zerolog.Logger, filePath string, port int) error {
 	server := newServer(logger)
 	err := server.setConn(filePath)
 	if err != nil {
-		return errors.New("error starting server database: " + fmt.Sprint(err))
+		return fmt.Errorf("error starting server database: %w", err)
 	}
 
 	// set the router
 	router := mux.NewRouter().StrictSlash(true)
 
-	router.HandleFunc("/set/{pk}/{project}/{key}", server.set).Methods("POST")
-	router.HandleFunc("/get/{pk}/{project}/{key}", server.get).Methods("GET")
-	router.HandleFunc("/list/{pk}/{project}", server.list).Methods("GET")
-	router.HandleFunc("/delete/{pk}/{project}/{key}", server.delete).Methods("DELETE")
+	router.HandleFunc("/{pk}/{project}/{key}", server.set).Methods("POST")
+	router.HandleFunc("/{pk}/{project}/{key}", server.get).Methods("GET")
+	router.HandleFunc("/{pk}/{project}", server.list).Methods("GET")
+	router.HandleFunc("/{pk}/{project}", server.deleteProject).Methods("DELETE")
+	router.HandleFunc("/{pk}/{project}/{key}", server.delete).Methods("DELETE")
 
 	// start the server
-	logger.Debug().Msg("server is running at " + fmt.Sprint(port))
-	err = http.ListenAndServe(":"+fmt.Sprint(port), router)
+	logger.Debug().Msg(fmt.Sprint("server is running at ", port))
+	err = http.ListenAndServe(fmt.Sprintf(":%v", port), router)
 
 	if errors.Is(err, http.ErrServerClosed) {
 		return errors.New("server closed")
 	} else if err != nil {
-		return errors.New("starting server failed with error: " + fmt.Sprint(err))
+		return fmt.Errorf("starting server failed with error: %w", err)
 	}
 
 	return nil
